--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nvidia-graphics-drivers (304.108-2) UNRELEASED; urgency=low
+
+  * Stop building libxvmcnvidia1 package, now built from
+    src:nvidia-graphics-drivers-legacy-304xx.
+
+ -- Andreas Beckmann <anbe@debian.org>  Wed, 11 Sep 2013 03:52:00 +0200
+
 nvidia-graphics-drivers (304.108-1) unstable; urgency=low
 
   * New upstream legacy 304xx branch release 304.108 (2013-08-08).
