--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ nvidia-graphics-drivers (304.108-2) UNRELEASED; urgency=low
 
   * Stop building libxvmcnvidia1 package, now built from
     src:nvidia-graphics-drivers-legacy-304xx.
+  * libgl1-nvidia-glx (<< 310) and libgl1-nvidia-legacy-304xx-glx are not
+    co-installable due to libnvidia-tls.so.304.108.  (Closes: #722288)
 
  -- Andreas Beckmann <anbe@debian.org>  Wed, 11 Sep 2013 03:52:00 +0200
 
