--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (304.108-2) UNRELEASED; urgency=low
+nvidia-graphics-drivers (304.108-2) unstable; urgency=low
 
   * Stop building libxvmcnvidia1 package, now built from
     src:nvidia-graphics-drivers-legacy-304xx.
@@ -7,7 +7,7 @@ nvidia-graphics-drivers (304.108-2) UNRELEASED; urgency=low
   * Change the virtual package name providing the kernel module to follow the
     renamed module.
 
- -- Andreas Beckmann <anbe@debian.org>  Wed, 11 Sep 2013 03:52:00 +0200
+ -- Andreas Beckmann <anbe@debian.org>  Wed, 11 Sep 2013 05:37:09 +0200
 
 nvidia-graphics-drivers (304.108-1) unstable; urgency=low
 
