drop patches for linux 3.10, fixed upstream
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/319@4240 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -26,6 +26,7 @@ nvidia-graphics-drivers (319.49-1) UNRELEASED; urgency=low
     - Fixed a bug that caused the X server to crash when querying the current
       mode of disabled displays.
   * Update nv-readme.ids.
+  * linux-3.10-{i2c,procfs}.patch: Remove. Fixed upstream.
   * nvidia-detect [armhf]: Don't ship PCI ID lists for legacy drivers.
   * Restrict watch file to releases from the 319.xx long lived branch.
 
