--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (304.108-3) UNRELEASED; urgency=low
+nvidia-graphics-drivers (304.108-3) unstable; urgency=low
 
   * Rework patching after unpack: rename
       debian/patches-manual => debian/patches, series => series-postunpack.
@@ -6,7 +6,7 @@ nvidia-graphics-drivers (304.108-3) UNRELEASED; urgency=low
     - Implement new conftest.sh function get_num_physpages (173.14.38).
   * linux-3.11.patch: Redone, based on 173.14.38.
 
- -- Andreas Beckmann <anbe@debian.org>  Sun, 15 Sep 2013 12:15:30 +0200
+ -- Andreas Beckmann <anbe@debian.org>  Sun, 15 Sep 2013 13:06:17 +0200
 
 nvidia-graphics-drivers (304.108-2) unstable; urgency=low
 
