--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ nvidia-graphics-drivers (304.108-3) unstable; urgency=low
   * conftest.h:
     - Implement new conftest.sh function get_num_physpages (173.14.38).
   * linux-3.11.patch: Redone, based on 173.14.38.
+  * Bump glx-alternative-nvidia dependency to 0.4.
 
  -- Andreas Beckmann <anbe@debian.org>  Sun, 15 Sep 2013 13:06:17 +0200
 
