--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ nvidia-graphics-drivers (325.15-2) UNRELEASED; urgency=low
   * Merge changes from 304.108-3 and 313.49 (UNRELEASED).
     - linux-3.11.patch: New patch to fix compilation with Linux 3.11.
       (Closes: #722894)
+  * Note: Some features from 313.49 are not yet in 325.15.
 
  -- Andreas Beckmann <anbe@debian.org>  Fri, 16 Aug 2013 00:59:24 +0200
 
@@ -10,20 +11,8 @@ nvidia-graphics-drivers (325.15-1) experimental; urgency=low
 
   * New upstream short lived branch release 325.15 (2013-08-05).
   * New upstream release 319 series.
-    - Fixed a bug that caused applications using CUDA-GL interop to crash
-      when run on X servers with Xinerama enabled.
-    - Fixed a bug that could prevent some double-bit ECC errors from being
-      properly reported.
-    - Fixed a bug which could cause a blank screen when changing house sync
-      settings on Quadro Kepler GPUs with Quadro Sync boards.
-    - Fixed a bug that prevented nested loops with identical loop conditions
-      in GLSL shaders from terminating correctly. This could cause hangs in
-      applications such as Exa PowerVIZ.
     - Added support for the following GPUs: GeForce GT 625, GRID K340,
       GRID K350, NVS 315, Quadro K500M.
-    - Fixed a bug that resulted in corrupt texels when a previously empty
-      texture image was specified with glXBindTexImageEXT. In GNOME 3, this
-      caused gnome-screenshot to produce garbled window screenshots.
   * Update nv-readme.ids.
   * conftest.h: Implement new conftest.sh functions proc_create_data (325.15),
       pde_data (325.15), proc_remove (325.15), dom0_kernel_present (325.08),
