--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (325.15-3) experimental; urgency=low
+
+  * Enable building the new libnvidia-ifr1 package.
+
+ -- Andreas Beckmann <anbe@debian.org>  Sun, 15 Sep 2013 16:20:51 +0200
+
 nvidia-graphics-drivers (325.15-2) experimental; urgency=low
 
   * Merge changes from 304.108-3 and 313.49 (UNRELEASED).
