--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (319.60-1) UNRELEASED; urgency=low
+nvidia-graphics-drivers (319.60-1) unstable; urgency=low
 
   * New upstream long lived branch release 319.60 (2013-10-01).
     - Fixed a bug that could cause OpenGL applications to crash during the
@@ -44,8 +44,9 @@ nvidia-graphics-drivers (319.60-1) UNRELEASED; urgency=low
   * nvidia-detect [armhf]: Don't ship PCI ID lists for legacy drivers.
   * Restrict watch file to releases from the 319.xx long lived branch.
   * Merge changes from 304.108-4 and 313.30-3.
+  * Upload to unstable.
 
- -- Andreas Beckmann <anbe@debian.org>  Sun, 20 Oct 2013 01:17:34 +0200
+ -- Andreas Beckmann <anbe@debian.org>  Mon, 21 Oct 2013 10:55:26 +0200
 
 nvidia-graphics-drivers (319.32-2) experimental; urgency=low
 
