--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-nvidia-graphics-drivers (319.60-2) UNRELEASED; urgency=low
+nvidia-graphics-drivers (319.60-2) unstable; urgency=low
 
   * {libgl1-nvidia-glx,libcuda1}.postinst: Load debconf/confmodule, may be
     used by /usr/lib/nvidia/check* scripts.  (Closes: #722469)
 
- -- Andreas Beckmann <anbe@debian.org>  Tue, 22 Oct 2013 16:16:47 +0200
+ -- Andreas Beckmann <anbe@debian.org>  Tue, 22 Oct 2013 16:34:20 +0200
 
 nvidia-graphics-drivers (319.60-1) unstable; urgency=low
 
