--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-nvidia-graphics-drivers (325.15-4) UNRELEASED; urgency=low
+nvidia-graphics-drivers (325.15-4) experimental; urgency=low
 
   * Merge changes from 304.108-4 and 319.60-2.
 
- -- Andreas Beckmann <anbe@debian.org>  Mon, 21 Oct 2013 11:15:53 +0200
+ -- Andreas Beckmann <anbe@debian.org>  Tue, 22 Oct 2013 17:36:17 +0200
 
 nvidia-graphics-drivers (325.15-3) experimental; urgency=low
 
