restrict watch file to releases from the 325.xx short lived branch
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/325@4425 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 nvidia-graphics-drivers (325.15-4) experimental; urgency=low
 
   * Merge changes from 304.108-4 and 319.60-2.
+  * Restrict watch file to releases from the 325.xx short lived branch.
 
  -- Andreas Beckmann <anbe@debian.org>  Tue, 22 Oct 2013 17:36:17 +0200
 
