ship nvidia-debugdump
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/331@4430 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -57,6 +57,7 @@ nvidia-graphics-drivers (331.13-1) UNRELEASED; urgency=low
     - Fixed a bug that prevented SDI output from working when two or more
       non-SDI displays were being driven by the same GPU.
   * Update symbols control files.
+  * nvidia-driver: Ship nvidia-debugdump.
 
  -- Andreas Beckmann <anbe@debian.org>  Mon, 21 Oct 2013 02:04:28 +0200
 
