implement new conftest.sh tests
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/331@4440 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -60,6 +60,11 @@ nvidia-graphics-drivers (331.13-1) UNRELEASED; urgency=low
   * Update symbols control files.
   * Update lintian overrides.
   * nvidia-driver: Ship nvidia-debugdump.
+  * conftest.h:
+    - Implement checks for linux/printk.h, linux/ratelimit.h,
+      linux/prio_tree.h (331.13).
+    - Implement new conftest.sh functions vma_prio_tree_foreach,
+      address_space_init_once, vm_operations_struct (331.13).
 
  -- Andreas Beckmann <anbe@debian.org>  Mon, 21 Oct 2013 02:04:28 +0200
 
