--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (331.13-1) UNRELEASED; urgency=low
+nvidia-graphics-drivers (331.13-1) experimental; urgency=low
 
   * New upstream beta 331.13 (2013-10-04).  (Closes: #727128)
     * Fixed a bug that caused the X server to fail to initialize when
@@ -66,7 +66,7 @@ nvidia-graphics-drivers (331.13-1) UNRELEASED; urgency=low
     - Implement new conftest.sh functions vma_prio_tree_foreach,
       address_space_init_once, vm_operations_struct (331.13).
 
- -- Andreas Beckmann <anbe@debian.org>  Mon, 21 Oct 2013 02:04:28 +0200
+ -- Andreas Beckmann <anbe@debian.org>  Thu, 24 Oct 2013 02:53:15 +0200
 
 nvidia-graphics-drivers (325.15-4) experimental; urgency=low
 
