--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,7 @@ nvidia-graphics-drivers (331.17-1) UNRELEASED; urgency=low
       Quadro K1100M, Quadro K2100M, Quadro K3100M, Quadro K4100M,
       Quadro K5100M, GeForce 705A, GeForce GT 730A.
   * Update nv-readme.ids.
+  * not-silent.patch: Refresh.
 
  -- Andreas Beckmann <anbe@debian.org>  Mon, 28 Oct 2013 23:13:02 +0100
 
