--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,7 @@ nvidia-graphics-drivers (331.17-1) UNRELEASED; urgency=low
   * conftest.h:
     - Remove obsolete conftest.sh functions vma_prio_tree_foreach,
       address_space_init_once (added in 331.13, removed in 331.17).
+    - Implement new conftest.sh function task_struct (331.17).
 
  -- Andreas Beckmann <anbe@debian.org>  Mon, 28 Oct 2013 23:13:02 +0100
 
