--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (319.60-3) UNRELEASED; urgency=low
+
+  * linux-3.11.patch: Use patch from NVIDIA.
+
+ -- Andreas Beckmann <anbe@debian.org>  Sat, 02 Nov 2013 22:38:09 +0100
+
 nvidia-graphics-drivers (319.60-2) unstable; urgency=low
 
   * {libgl1-nvidia-glx,libcuda1}.postinst: Load debconf/confmodule, may be
