--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ nvidia-graphics-drivers (319.60-3) UNRELEASED; urgency=low
       linux/prio_tree.h (331.13).
     - Implement new conftest.sh functions vm_operations_struct (331.13),
       task_struct (331.17).
+  * Bump Standards-Version to 3.9.5. No changes needed. 
 
  -- Andreas Beckmann <anbe@debian.org>  Sat, 02 Nov 2013 22:38:09 +0100
 
