--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ nvidia-graphics-drivers (331.20-1) UNRELEASED; urgency=low
     - Updated a fallback of writing temporary files to $HOME/.nvidia to
       use $HOME/.nv instead, as the latter path is already used for other
       NVIDIA driver related files.
+  * linux-3.11.patch: Remove, fixed upstream.
   * Merge changes from 319.60-3.
 
  -- Andreas Beckmann <anbe@debian.org>  Fri, 08 Nov 2013 01:30:00 +0100
