update symbols control files
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/331@4488 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ nvidia-graphics-drivers (331.20-1) UNRELEASED; urgency=low
       use $HOME/.nv instead, as the latter path is already used for other
       NVIDIA driver related files.
   * linux-3.11.patch: Remove, fixed upstream.
+  * Update symbols control files.
   * Merge changes from 319.60-3.
 
  -- Andreas Beckmann <anbe@debian.org>  Fri, 08 Nov 2013 01:30:00 +0100
