--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,7 @@ nvidia-graphics-drivers (331.20-1) UNRELEASED; urgency=low
   * conftest.h: Implement new conftest.sh functions address_space,
       address_space_init_once (331.20).
   * Merge changes from 319.60-3.
+  * Update lintian overrides.
 
  -- Andreas Beckmann <anbe@debian.org>  Fri, 08 Nov 2013 01:30:00 +0100
 
