--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,7 @@ nvidia-graphics-drivers (331.20-1) UNRELEASED; urgency=low
       address_space_init_once (331.20).
   * Merge changes from 319.60-3.
   * Update lintian overrides.
+  * Update package descriptions.
 
  -- Andreas Beckmann <anbe@debian.org>  Fri, 08 Nov 2013 01:30:00 +0100
 
