libcuda1: add Provides: libcuda-5.5-1
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/331@4493 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,7 @@ nvidia-graphics-drivers (331.20-1) UNRELEASED; urgency=low
   * Merge changes from 319.60-3.
   * Update lintian overrides.
   * Update package descriptions.
+  * libcuda1: Add Provides: libcuda-5.5-1.
 
  -- Andreas Beckmann <anbe@debian.org>  Fri, 08 Nov 2013 01:30:00 +0100
 
