--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (319.60-4) UNRELEASED; urgency=low
+
+  * libcuda1: Add Provides: libcuda-5.5-1.
+
+ -- Andreas Beckmann <anbe@debian.org>  Fri, 08 Nov 2013 18:08:42 +0100
+
 nvidia-graphics-drivers (319.60-3) unstable; urgency=low
 
   * linux-3.11.patch: Use patch from NVIDIA.
