--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (331.20-2) UNRELEASED; urgency=low
+
+  * libnvidia-fbc1: New package for NvFBCOpenGL (libnvidia-fbc.so.1).
+
+ -- Andreas Beckmann <anbe@debian.org>  Fri, 08 Nov 2013 20:16:54 +0100
+
 nvidia-graphics-drivers (331.20-1) experimental; urgency=low
 
   * New upstream long lived branch release 331.20 (2013-11-06).
