finalize changelog for nvidia-graphics-drivers (331.20-2), upload to NEW
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/331@4509 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (331.20-2) UNRELEASED; urgency=low
+nvidia-graphics-drivers (331.20-2) experimental; urgency=low
 
   * libnvidia-fbc1: New package for NvFBCOpenGL (libnvidia-fbc.so.1).
   * [i386, armhf] lib{egl1,gles1,gles2}-nvidia, libnvidia-eglcore:
@@ -9,7 +9,7 @@ nvidia-graphics-drivers (331.20-2) UNRELEASED; urgency=low
   * Add libcuda1-i386:i386 package that can be recommended from amd64 packages
     that want to make the 32-bit CUDA runtime available.
 
- -- Andreas Beckmann <anbe@debian.org>  Fri, 08 Nov 2013 20:16:54 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Fri, 08 Nov 2013 22:13:05 +0100
 
 nvidia-graphics-drivers (331.20-1) experimental; urgency=low
 
