--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,21 @@
-nvidia-graphics-drivers (319.60-4) UNRELEASED; urgency=low
+nvidia-graphics-drivers (319.72-1) UNRELEASED; urgency=low
 
+  * New upstream long lived branch release 319.72 (2013-11-06).
+    - Added support for the following GPUs: Quadro K510M, Quadro K610M,
+      Quadro K1100M, Quadro K2100M, Quadro K3100M, Quadro K4100M,
+      Quadro K5100M, GeForce 705A, GeForce GT 730A.  
+    - Fixed a bug that prevented SDI output from working when two or more
+      non-SDI displays were being driven by the same GPU.
+  * New upstream legacy 304xx branch release 304.116 (2013-11-06).
+    - Improved compatibility with recent Linux kernels.
+    - Updated the NVIDIA OpenGL driver to write temporary files to $TMPDIR
+      if it is set, instead of unconditionally writing to /tmp.
+    - Updated a fallback of writing temporary files to $HOME/.nvidia to
+      use $HOME/.nv instead, as the latter path is already used for other
+      NVIDIA driver related files.
   * libcuda1: Add Provides: libcuda-5.5-1.
 
- -- Andreas Beckmann <anbe@debian.org>  Fri, 08 Nov 2013 18:08:42 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Sat, 09 Nov 2013 02:02:38 +0100
 
 nvidia-graphics-drivers (319.60-3) unstable; urgency=low
 
@@ -64,12 +77,6 @@ nvidia-graphics-drivers (319.60-1) unstable; urgency=low
       caused gnome-screenshot to produce garbled window screenshots.
     - Fixed a bug that caused the X server to crash when querying the current
       mode of disabled displays.
-  * New upstream release 304 series.
-    - Updated the NVIDIA OpenGL driver to write temporary files to $TMPDIR
-      if it is set, instead of unconditionally writing to /tmp.
-    - Updated a fallback of writing temporary files to $HOME/.nvidia to
-      use $HOME/.nv instead, as the latter path is already used for other
-      NVIDIA driver related files.
   * Update nv-readme.ids.
   * Update symbols control files.
   * linux-3.10-{i2c,procfs}.patch: Remove. Fixed upstream.
