update lintian overrides
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@4525 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,7 @@ nvidia-graphics-drivers (319.72-1) UNRELEASED; urgency=low
   * conftest.h: Implement new conftest.sh functions address_space,
     address_space_init_once (331.20).
   * libcuda1: Add Provides: libcuda-5.5-1.
+  * Update lintian overrides.
 
  -- Andreas Beckmann <anbe@debian.org>  Sat, 09 Nov 2013 02:02:38 +0100
 
